[package]
name = "embryo"
version = "0.1.0"
edition = "2021"
license-file="LICENSE"
repository="https://github.com/EmergenceSystem/Embryo"
description="Emergence data structure"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 

[dependencies]
serde = { version = "1", features = ["derive"] }
dirs = "3.0.2"

